@@ -1,3 +1,8 @@
+2003-12-08  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/sample.c: 
+	* generic/sample.h: updated for 64-bit correctness
+
 2003-12-05  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* configure:
